adding more country paris itali vigas

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
             </div>
+            <div class="destination" id="paris">
+                <h2>Paris</h2>
+            </div>
+            <div class="destination" id="vigas">
+                <h2>Vigas</h2>
+            </div>
+            <div class="destination" id="itali">
+                <h2>Itali</h2>
+            </div>
         </div>
     </div>
 
